--- a/package.json
+++ b/package.json
@@ -29,23 +29,17 @@
     "npm:": ">=9.*"
   },
   "dependencies": {
-    "@apidevtools/swagger-parser": "^10.1.0",
     "@aws-sdk/client-s3": "^3.369.0",
-    "@diplodoc/client": "^1.0.2",
+    "@diplodoc/client": "^1.2.0",
     "@diplodoc/markdown-translation": "^1.0.2",
-    "@diplodoc/mermaid-extension": "^1.1.3",
-    "@diplodoc/openapi-extension": "^1.4.4",
-    "@diplodoc/transform": "^4.3.0",
+    "@diplodoc/mermaid-extension": "^1.2.1",
+    "@diplodoc/openapi-extension": "^1.4.10",
+    "@diplodoc/transform": "^4.7.3",
     "@octokit/core": "4.2.4",
-    "@types/glob": "^8.0.0",
-    "@types/json-stringify-safe": "^5.0.0",
     "@yandex-cloud/nodejs-sdk": "^2.2.2",
     "ajv": "^8.11.0",
     "async": "^3.2.4",
-    "aws-sdk": "^2.1425.0",
-    "bem-cn-lite": "^4.1.0",
     "chalk": "4.1.2",
-    "dotenv": "^16.0.3",
     "fast-xml-parser": "^4.0.11",
     "glob": "^8.0.3",
     "highlight.js": "^11.7.0",
@@ -66,13 +60,15 @@
     "yargs": "17.7.2"
   },
   "devDependencies": {
-    "@diplodoc/eslint-config": "^1.0.14",
-    "@diplodoc/prettier-config": "^1.0.0",
+    "@diplodoc/eslint-config": "^2.0.0",
+    "@diplodoc/prettier-config": "^2.0.0",
     "@diplodoc/tsconfig": "^1.0.2",
     "@types/async": "^3.2.15",
     "@types/chalk": "2.2.0",
+    "@types/glob": "^8.1.0",
     "@types/html-escaper": "^3.0.0",
     "@types/js-yaml": "4.0.5",
+    "@types/json-stringify-safe": "^5.0.3",
     "@types/lodash": "4.14.195",
     "@types/mime-types": "2.1.1",
     "@types/node": "14.*",
@@ -80,20 +76,10 @@
     "@types/tar-stream": "^2.2.2",
     "@types/yargs": "17.0.24",
     "esbuild": "^0.17.17",
-    "eslint": "^8.0.0",
     "husky": "8.0.3",
     "lint-staged": "13.2.2",
     "lodash": "4.17.21",
-    "prettier": "^3.0.3",
-    "ts-jest": "29.1.0",
-    "ts-node": "^10.9.1",
     "typescript": "4.9.5"
-  },
-  "overrides": {
-    "react-sortable-hoc": {
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0"
-    }
   },
   "husky": {
     "hooks": {
@@ -129,5 +115,8 @@
     "tool",
     "tools",
     "generator"
-  ]
+  ],
+  "overrides": {
+    "markdown-it": "^13.0.2"
+  }
 }
