--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,8 @@
   "extends": "@diplodoc/tsconfig",
   "compilerOptions": {
     "target": "es6",
-    "outDir": "build",
-    "jsx": "react",
-    "baseUrl": ".",
-    "paths": {
-      "*": ["./src/app/*"]
-    }
+    "moduleResolution": "NodeNext",
+    "outDir": "build"
   },
   "include": ["src"],
   "exclude": ["node_modules"],
