fix: Limit translated chunk size

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,6 @@
 {
-    "extends": ["@diplodoc/eslint-config"]
+    "extends": ["@diplodoc/eslint-config"],
+    "env": {
+        "node": true
+    }
 }
