--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@aws-sdk/client-s3": "^3.369.0",
     "@diplodoc/client": "^2.0.3",
     "@diplodoc/latex-extension": "^1.0.3",
-    "@diplodoc/markdown-translation": "^1.1.0",
+    "@diplodoc/markdown-translation": "^2.0.0-alpha-2",
     "@diplodoc/mermaid-extension": "^1.2.1",
     "@diplodoc/openapi-extension": "^1.4.13",
     "@diplodoc/transform": "^4.8.2",
@@ -42,13 +42,10 @@
     "ajv": "^8.11.0",
     "async": "^3.2.4",
     "chalk": "4.1.2",
-    "fast-xml-parser": "^4.0.11",
     "glob": "^8.0.3",
     "highlight.js": "^11.7.0",
     "html-escaper": "^3.0.3",
-    "http-status-codes": "^2.2.0",
     "js-yaml": "4.1.0",
-    "json-stringify-safe": "^5.0.1",
     "mime-types": "2.1.35",
     "minimatch": "^9.0.3",
     "node-html-parser": "^6.1.5",
