--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.369.0",
-    "@diplodoc/client": "^2.0.4",
+    "@diplodoc/client": "^2.0.5",
     "@diplodoc/latex-extension": "^1.0.3",
-    "@diplodoc/markdown-translation": "^2.0.0-alpha-2",
+    "@diplodoc/markdown-translation": "^2.0.0-beta-1",
     "@diplodoc/mermaid-extension": "^1.2.1",
     "@diplodoc/openapi-extension": "^1.4.13",
     "@diplodoc/transform": "^4.8.2",
