--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "@aws-sdk/client-s3": "^3.369.0",
     "@diplodoc/client": "^2.0.5",
     "@diplodoc/latex-extension": "^1.1.0",
-    "@diplodoc/markdown-translation": "^2.0.0-beta-1",
     "@diplodoc/mermaid-extension": "^1.2.1",
     "@diplodoc/openapi-extension": "^1.4.13",
     "@diplodoc/transform": "^4.8.2",
+    "@diplodoc/translation": "^1.0.6",
     "@octokit/core": "4.2.4",
     "@yandex-cloud/nodejs-sdk": "^2.2.2",
     "ajv": "^8.11.0",
