--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "@diplodoc/mermaid-extension": "^1.2.1",
     "@diplodoc/openapi-extension": "^1.4.13",
     "@diplodoc/transform": "^4.8.2",
-    "@diplodoc/translation": "^1.0.6",
+    "@diplodoc/translation": "^1.0.7",
     "@octokit/core": "4.2.4",
-    "@yandex-cloud/nodejs-sdk": "^2.2.2",
     "ajv": "^8.11.0",
     "async": "^3.2.4",
+    "axios": "^1.6.7",
     "chalk": "4.1.2",
     "glob": "^8.0.3",
     "highlight.js": "^11.7.0",
