feat: Rearrange dev and prod deps for optimal bimary (pkg) build

--- a/package.json
+++ b/package.json
@@ -30,38 +30,23 @@
     "node": ">=18.*"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.369.0",
     "@diplodoc/client": "^2.1.1",
-    "@diplodoc/latex-extension": "^1.1.0",
-    "@diplodoc/mermaid-extension": "^1.2.1",
-    "@diplodoc/openapi-extension": "^2.0.0",
-    "@diplodoc/transform": "^4.8.2",
     "@diplodoc/translation": "^1.0.7",
-    "@octokit/core": "4.2.4",
-    "ajv": "^8.11.0",
-    "async": "^3.2.4",
-    "axios": "^1.6.7",
-    "chalk": "4.1.2",
-    "glob": "^8.0.3",
-    "highlight.js": "^11.7.0",
-    "html-escaper": "^3.0.3",
-    "js-yaml": "4.1.0",
-    "mime-types": "2.1.35",
-    "minimatch": "^9.0.3",
-    "node-html-parser": "^6.1.5",
+    "katex": "^0.16.9",
     "shelljs": "0.8.5",
-    "simple-git": "3.22.0",
-    "slugify": "^1.6.5",
-    "tar-stream": "^3.1.4",
     "threads": "1.7.0",
-    "threads-plugin": "1.4.0",
-    "walk-sync": "3.0.0",
     "yargs": "17.7.2"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.525.0",
     "@diplodoc/eslint-config": "^2.0.0",
+    "@diplodoc/latex-extension": "^1.1.0",
+    "@diplodoc/mermaid-extension": "^1.2.1",
+    "@diplodoc/openapi-extension": "^2.0.0",
     "@diplodoc/prettier-config": "^2.0.0",
+    "@diplodoc/transform": "^4.8.2",
     "@diplodoc/tsconfig": "^1.0.2",
+    "@octokit/core": "4.2.4",
     "@types/async": "^3.2.15",
     "@types/chalk": "2.2.0",
     "@types/glob": "^8.1.0",
@@ -74,11 +59,25 @@
     "@types/shelljs": "0.8.12",
     "@types/tar-stream": "^2.2.2",
     "@types/yargs": "17.0.24",
+    "ajv": "^8.11.0",
+    "async": "^3.2.4",
+    "axios": "^1.6.7",
+    "chalk": "4.1.2",
     "esbuild": "^0.20.0",
+    "glob": "^8.0.3",
+    "html-escaper": "^3.0.3",
     "husky": "8.0.3",
+    "js-yaml": "4.1.0",
     "lint-staged": "13.2.2",
     "lodash": "4.17.21",
-    "typescript": "4.9.5"
+    "mime-types": "2.1.35",
+    "minimatch": "^9.0.3",
+    "node-html-parser": "^6.1.5",
+    "simple-git": "3.22.0",
+    "slugify": "^1.6.5",
+    "tar-stream": "^3.1.4",
+    "typescript": "^5.3.3",
+    "walk-sync": "^3.0.0"
   },
   "husky": {
     "hooks": {
