chore: Downgrade lint-staged. Fix metapackage conflicts.

--- a/package.json
+++ b/package.json
@@ -62,13 +62,13 @@
     "ajv": "^8.11.0",
     "async": "^3.2.4",
     "axios": "^1.6.7",
-    "chalk": "4.1.2",
+    "chalk": "^4.1.2",
     "esbuild": "^0.20.0",
     "glob": "^8.0.3",
     "html-escaper": "^3.0.3",
     "husky": "8.0.3",
     "js-yaml": "4.1.0",
-    "lint-staged": "13.2.2",
+    "lint-staged": "^12.5.0",
     "lodash": "4.17.21",
     "mime-types": "2.1.35",
     "minimatch": "^9.0.3",
