fix: Try to fix binary build

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "schemas",
     "src"
   ],
-  "imports": {
-    "#package": "./package.json"
+  "exports": {
+    "./package": "./package.json"
   },
   "scripts": {
     "build": "node scripts/build.cli.js",
