--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "url": "git@github.com:diplodoc-platform/cli.git"
   },
   "bin": {
-    "yfm": "build/index.js"
+    "yfm": "build/index.js",
+    "docs": "build/index.js"
   },
   "main": "build/index.js",
   "files": [
@@ -27,8 +28,8 @@
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
     "typecheck": "tsc --noEmit",
-    "prepublishOnly": "npm run lint && npm run build",
-    "git:head": "git checkout master && git pull"
+    "test": "vitest",
+    "prepublishOnly": "npm run lint && npm run build"
   },
   "engines": {
     "node": ">=18.*"
@@ -59,14 +60,16 @@
     "@types/json-stringify-safe": "^5.0.3",
     "@types/lodash": "4.14.195",
     "@types/mime-types": "2.1.4",
-    "@types/node": "14.*",
+    "@types/node": "^18.19.4",
     "@types/shelljs": "0.8.15",
     "@types/tar-stream": "^2.2.2",
     "@types/yargs": "17.0.24",
+    "@vitest/coverage-v8": "^1.2.1",
     "ajv": "^8.11.0",
     "async": "^3.2.4",
     "axios": "^1.6.7",
     "chalk": "^4.1.2",
+    "commander": "^12.0.0",
     "esbuild": "^0.20.0",
     "glob": "^8.0.3",
     "html-escaper": "^3.0.3",
@@ -77,10 +80,14 @@
     "mime-types": "2.1.35",
     "minimatch": "^9.0.3",
     "node-html-parser": "^6.1.5",
+    "normalize-path": "^3.0.0",
     "simple-git": "3.22.0",
     "slugify": "^1.6.5",
+    "tapable": "^2.2.1",
     "tar-stream": "^3.1.4",
-    "typescript": "^5.3.3",
+    "typescript": "^5.4.5",
+    "vite-tsconfig-paths": "^4.2.3",
+    "vitest": "^1.1.3",
     "walk-sync": "^3.0.0"
   },
   "husky": {
