fix: apply some rudimentary fixes for outstanding TS issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "lib": ["ES2019"],
     "target": "es6",
     "outDir": "build",
-    "module": "CommonJS",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "paths": {
       "~/*": ["./src/*"]
     }
