--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@diplodoc/client": "^2.7.0",
     "@diplodoc/translation": "^1.4.3",
+    "chroma-js": "^3.0.0",
     "katex": "^0.16.9",
     "shelljs": "0.8.5",
     "threads": "1.7.0",
@@ -54,6 +55,7 @@
     "@octokit/core": "4.2.4",
     "@types/async": "^3.2.15",
     "@types/chalk": "2.2.0",
+    "@types/chroma-js": "^2.4.4",
     "@types/glob": "^8.1.0",
     "@types/html-escaper": "^3.0.0",
     "@types/js-yaml": "4.0.9",
