--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@diplodoc/mermaid-extension": "^1.3.1",
     "@diplodoc/openapi-extension": "^2.4.1",
     "@diplodoc/prettier-config": "^2.0.0",
-    "@diplodoc/transform": "^4.32.3",
+    "@diplodoc/transform": "0.0.0-rc-add-file-meta-202410220915",
     "@diplodoc/tsconfig": "^1.0.2",
     "@octokit/core": "4.2.4",
     "@types/async": "^3.2.15",
