--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "katex": "^0.16.9",
     "shelljs": "0.8.5",
     "threads": "1.7.0",
-    "yargs": "17.7.2"
+    "yargs": "17.7.2",
+    "live-server": "^1.2.2"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.525.0",
@@ -107,7 +108,8 @@
     "typescript": "^5.4.5",
     "vite-tsconfig-paths": "^4.2.3",
     "vitest": "^1.1.3",
-    "walk-sync": "^3.0.0"
+    "walk-sync": "^3.0.0",
+    "chokidar": "^4.0.1"
   },
   "engines": {
     "node": ">=18.*"
