--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "slugify": "^1.6.5",
     "tapable": "^2.2.1",
     "tar-stream": "^3.1.4",
+    "ts-dedent": "^2.2.0",
     "typescript": "^5.4.5",
     "vite-tsconfig-paths": "^4.2.3",
     "vitest": "^1.1.3",
