--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "src"
   ],
   "scripts": {
-    "build": "node scripts/build.cli.js",
+    "build": "npm run build:clean && node scripts/build.cli.js",
+    "build:clean": "rm -rf build assets coverage",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run lint && npm run build",
@@ -59,8 +60,7 @@
     "@diplodoc/translation": "^1.5.0",
     "katex": "^0.16.9",
     "shelljs": "0.8.5",
-    "threads": "1.7.0",
-    "yargs": "17.7.2"
+    "threads": "1.7.0"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.525.0",
