--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "prepublishOnly": "npm run lint && npm run build",
     "start": "node build/index.js",
     "test": "vitest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "postinstall": "node scripts/generate-pc-schema.js"
   },
   "husky": {
     "hooks": {
@@ -54,7 +55,7 @@
   },
   "dependencies": {
     "@diplodoc/client": "^3.1.8",
-    "@diplodoc/translation": "^1.4.3",
+    "@diplodoc/translation": "^1.5.0",
     "katex": "^0.16.9",
     "shelljs": "0.8.5",
     "threads": "1.7.0",
