fix: Install highlight for prod package build

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "@diplodoc/client": "^3.1.8",
     "@diplodoc/translation": "^1.5.1",
+    "highlight.js": "^11.10.0",
     "katex": "^0.16.9",
     "shelljs": "0.8.5",
     "threads": "1.7.0"
