--- a/tests/mocks/metadata/md2md-with-metadata/input/presets.yaml
+++ b/tests/mocks/metadata/md2md-with-metadata/input/presets.yaml
@@ -1,5 +1,6 @@
-__metadata:
-  - name: test-yfm
-    content: inline test
-  - name: yfm-config
-    content: config test
+default:
+  __metadata:
+    - name: test-yfm
+      content: inline test
+    - name: yfm-config
+      content: config test
