--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "build",
     "module": "es2022",
     "moduleResolution": "bundler",
+    "experimentalDecorators": false,
     "paths": {
       "~/*": ["./src/*"]
     }
