--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@diplodoc/translation": "^1.6.0",
     "highlight.js": "^11.10.0",
     "katex": "^0.16.9",
+    "p-map": "^4.0.0",
     "shelljs": "0.8.5",
     "threads": "1.7.0"
   },
