--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "tar-stream": "^3.1.4",
     "ts-dedent": "^2.2.0",
     "typescript": "^5.4.5",
+    "uuid": "^11.0.4",
     "vite-tsconfig-paths": "^4.2.3",
     "vitest": "^2.1.8",
     "vitest-when": "^0.5.0",
