--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "moduleResolution": "bundler",
     "experimentalDecorators": false,
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["./src/*"],
+      "@diplodoc/cli/lib/*": ["./src/core/*"]
     }
   },
   "include": ["src"],
