--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "@diplodoc/client": "^3.1.12",
     "@diplodoc/translation": "^1.7.3",
+    "chroma-js": "^3.1.2",
     "highlight.js": "^11.10.0",
     "katex": "^0.16.9",
     "shelljs": "0.8.5",
@@ -76,6 +77,7 @@
     "@octokit/core": "4.2.4",
     "@types/async": "^3.2.15",
     "@types/chalk": "2.2.0",
+    "@types/chroma-js": "^3.1.0",
     "@types/html-escaper": "^3.0.0",
     "@types/js-yaml": "4.0.9",
     "@types/json-stringify-safe": "^5.0.3",
