--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,9 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[{*.txt}]
+indent_style = unset
+
 [{*.json,*.yml,*.yaml}]
 indent_style = space
 indent_size = 2
