--- a/package.json
+++ b/package.json
@@ -55,6 +55,10 @@
       "git add"
     ]
   },
+  "peerDependencies": {
+    "vitest": "^2.1.8",
+    "vitest-when": "^0.5.0"
+  },
   "dependencies": {
     "@diplodoc/client": "^3.1.9",
     "@diplodoc/translation": "^1.6.0",
