feat: Implement new AlgoliaSearch extension

--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@types/yargs": "17.0.24",
     "@vitest/coverage-v8": "^2.1.8",
     "ajv": "^8.11.0",
+    "algoliasearch": "^5.20.0",
     "async": "^3.2.4",
     "axios": "^1.6.7",
     "chalk": "^4.1.2",
