--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "@diplodoc/client": "^3.1.9",
+    "@diplodoc/search-extension": "^1.2.0",
     "@diplodoc/translation": "^1.6.0",
     "highlight.js": "^11.10.0",
     "katex": "^0.16.9",
