fix: Fix presets resolving for root merged toc fragments

--- a/tests/mocks/regression/input/presets.yaml
+++ b/tests/mocks/regression/input/presets.yaml
@@ -1,6 +1,7 @@
 default:
   default-var: default-var-value
   not-var: not-var-value
+  product: root
 
 internal:
   default-var: default-var-internal-value
