--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "scripts": {
     "build": "npm run build:clean && node scripts/build.cli.js",
     "build:clean": "rm -rf build",
+    "e2e": "npm run build && (cd tests; npm test)",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run lint && npm run build",
@@ -67,8 +68,8 @@
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.525.0",
     "@diplodoc/eslint-config": "^2.0.0",
-    "@diplodoc/latex-extension": "^1.3.2",
-    "@diplodoc/mermaid-extension": "^1.3.3",
+    "@diplodoc/latex-extension": "^1.3.3",
+    "@diplodoc/mermaid-extension": "^1.3.4",
     "@diplodoc/openapi-extension": "^2.7.0",
     "@diplodoc/prettier-config": "^2.0.0",
     "@diplodoc/search-extension": "^1.2.2",
@@ -84,8 +85,6 @@
     "@types/mime-types": "2.1.4",
     "@types/node": "^18.19.4",
     "@types/shelljs": "0.8.15",
-    "@types/tar-stream": "^2.2.2",
-    "@types/yargs": "17.0.24",
     "@vitest/coverage-v8": "^2.1.8",
     "ajv": "^8.11.0",
     "algoliasearch": "^5.20.0",
@@ -105,10 +104,10 @@
     "minimatch": "^9.0.3",
     "node-html-parser": "^6.1.5",
     "normalize-path": "^3.0.0",
+    "p-map": "^4.0.0",
     "simple-git": "3.22.0",
     "slugify": "^1.6.5",
     "tapable": "^2.2.1",
-    "tar-stream": "^3.1.4",
     "ts-dedent": "^2.2.0",
     "typescript": "^5.4.5",
     "uuid": "^11.0.4",
