chore: Split global.d.ts to meke it more stable

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,10 @@
       "@diplodoc/cli/commands/*": ["./src/commands/*"]
     }
   },
-  "include": ["src"],
+  "include": [
+    "src/path.d.ts",
+    "src/globals.d.ts",
+    "src"
+  ],
   "types": ["node"]
 }
