--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "build": "npm run build:clean && node scripts/build.cli.js",
     "build:clean": "rm -rf build",
-    "e2e": "npm run build && (cd tests; npm test)",
+    "e2e": "npm run build && cd tests && npm test",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run lint && npm run build",
@@ -69,6 +69,7 @@
     "@aws-sdk/client-s3": "^3.525.0",
     "@diplodoc/eslint-config": "^2.0.0",
     "@diplodoc/latex-extension": "^1.3.3",
+    "@diplodoc/liquid": "^1.1.3",
     "@diplodoc/mermaid-extension": "^1.3.4",
     "@diplodoc/openapi-extension": "^2.7.0",
     "@diplodoc/prettier-config": "^2.0.0",
