--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.525.0",
+    "@aws-sdk/lib-storage": "^3.758.0",
     "@diplodoc/eslint-config": "^2.0.0",
     "@diplodoc/latex-extension": "^1.3.2",
     "@diplodoc/mermaid-extension": "^1.3.3",
@@ -89,7 +90,7 @@
     "ajv": "^8.11.0",
     "algoliasearch": "^5.20.0",
     "async": "^3.2.4",
-    "axios": "^1.6.7",
+    "axios": "^1.7.8",
     "chalk": "^4.1.2",
     "commander": "^12.0.0",
     "csp-header": "^5.2.1",
