--- a/package.json
+++ b/package.json
@@ -19,6 +19,16 @@
   "license": "MIT",
   "author": "Yandex Data UI Team <data-ui@yandex-team.ru>",
   "exports": {
+    ".": {
+      "types": "./build/index.d.ts",
+      "node": "./build/index.js",
+      "default": "./build/index.mjs"
+    },
+    "./lib/*": {
+      "types": "./lib/*/index.d.ts",
+      "node": "./lib/*/index.js",
+      "default": "./lib/*/index.mjs"
+    },
     "./package": "./package.json"
   },
   "main": "build/index.js",
@@ -27,6 +37,7 @@
     "yfm": "build/index.js"
   },
   "files": [
+    "lib",
     "build",
     "assets",
     "schemas"
@@ -59,22 +70,30 @@
   "dependencies": {
     "@aws-sdk/lib-storage": "^3.758.0",
     "@diplodoc/client": "^3.1.12",
+    "@diplodoc/liquid": "^1.2.0",
+    "@diplodoc/transform": "^4.48.3",
     "@diplodoc/translation": "^1.7.4",
+    "chalk": "^4.1.2",
+    "commander": "^12.0.0",
+    "glob": "^10.4.5",
     "highlight.js": "^11.10.0",
+    "js-yaml": "4.1.0",
     "katex": "^0.16.9",
-    "shelljs": "0.8.5",
-    "threads": "1.7.0"
+    "lodash": "4.17.21",
+    "normalize-path": "^3.0.0",
+    "p-map": "^4.0.0",
+    "tapable": "^2.2.1",
+    "threads": "1.7.0",
+    "ts-dedent": "^2.2.0"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.525.0",
     "@diplodoc/eslint-config": "^2.0.0",
     "@diplodoc/latex-extension": "^1.3.3",
-    "@diplodoc/liquid": "^1.2.0",
     "@diplodoc/mermaid-extension": "^1.3.4",
     "@diplodoc/openapi-extension": "^2.7.0",
     "@diplodoc/prettier-config": "^2.0.0",
     "@diplodoc/search-extension": "^1.2.2",
-    "@diplodoc/transform": "^4.48.3",
     "@diplodoc/tsconfig": "^1.0.2",
     "@octokit/core": "4.2.4",
     "@types/async": "^3.2.15",
@@ -91,25 +110,16 @@
     "algoliasearch": "^5.20.0",
     "async": "^3.2.4",
     "axios": "^1.7.8",
-    "chalk": "^4.1.2",
-    "commander": "^12.0.0",
     "csp-header": "^5.2.1",
     "esbuild": "^0.23.1",
-    "glob": "^10.4.5",
     "html-escaper": "^3.0.3",
     "husky": "8.0.3",
-    "js-yaml": "4.1.0",
     "lint-staged": "^12.5.0",
-    "lodash": "4.17.21",
     "mime-types": "2.1.35",
     "minimatch": "^9.0.3",
     "node-html-parser": "^6.1.5",
-    "normalize-path": "^3.0.0",
-    "p-map": "^4.0.0",
     "simple-git": "3.22.0",
     "slugify": "^1.6.5",
-    "tapable": "^2.2.1",
-    "ts-dedent": "^2.2.0",
     "typescript": "^5.4.5",
     "uuid": "^11.0.4",
     "vite-tsconfig-paths": "^4.2.3",
