chore: Add regression test for variables

--- a/tests/mocks/regression/input/presets.yaml
+++ b/tests/mocks/regression/input/presets.yaml
@@ -2,6 +2,7 @@ default:
   default-var: default-var-value
   not-var: not-var-value
   product: root
+  user: Bob
 
 internal:
   default-var: default-var-internal-value
