--- a/tests/mocks/regression/input/toc.yaml
+++ b/tests/mocks/regression/input/toc.yaml
@@ -17,6 +17,8 @@ items:
     href: ./latex
   - name: Images
     href: ./images
+  - name: Autotitle
+    href: ./autotitle
   - name: includes
     href: ./includes
   - name: openapi
