--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "algoliasearch": "^5.20.0",
     "async": "^3.2.4",
     "axios": "^1.7.8",
+    "cheerio": "^1.0.0",
     "csp-header": "^5.2.1",
     "esbuild": "^0.23.1",
     "html-escaper": "^3.0.3",
