chore: update ci actions

--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -19,3 +19,11 @@ jobs:
       - run: npm publish --tag $(git branch --show-current)
         env:
           NODE_AUTH_TOKEN: ${{secrets.ROBOT_DATAUI_NPM_TOKEN}}
+      - working-directory: tests
+        run: npm ci
+      - working-directory: tests
+        run: npm version --no-git-tag-version 0.0.0-rc-$(git branch --show-current)-$(date "+%Y%m%d%H%M")
+      - working-directory: tests
+        run: npm publish --tag $(git branch --show-current)
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.ROBOT_DATAUI_NPM_TOKEN}} 
