--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "@types/mime-types": "2.1.4",
     "@types/node": "^18.19.4",
     "@types/shelljs": "0.8.15",
+    "@vitest/coverage-v8": "^3.1.1",
     "ajv": "^8.11.0",
     "algoliasearch": "^5.20.0",
     "async": "^3.2.4",
@@ -121,6 +122,7 @@
     "mime-types": "2.1.35",
     "minimatch": "^9.0.3",
     "node-html-parser": "^6.1.5",
+    "shelljs": "^0.9.2",
     "simple-git": "3.22.0",
     "slugify": "^1.6.5",
     "svgo": "^3.3.2",
@@ -129,7 +131,6 @@
     "typescript-transform-paths": "^3.5.5",
     "uuid": "^11.0.4",
     "vite-tsconfig-paths": "^4.2.3",
-    "@vitest/coverage-v8": "^3.1.1",
     "vitest": "^3.1.1",
     "vitest-when": "^0.6.0",
     "walk-sync": "^3.0.0"
