--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "test": "vitest --run",
     "test:watch": "vitest",
     "typecheck": "tsc --noEmit",
-    "regenerate-schemas": "scripts/regenerate-schemas.js"
+    "regenerate-schemas": "scripts/regenerate-schemas.js",
+    "algolia": "node build/index.js algolia index -i ../../../docs-o"
   },
   "husky": {
     "hooks": {
@@ -109,9 +110,10 @@
     "@types/shelljs": "0.8.15",
     "@vitest/coverage-v8": "^2.1.8",
     "ajv": "^8.11.0",
-    "algoliasearch": "^5.20.0",
+    "algoliasearch": "^5.23.3",
     "async": "^3.2.4",
     "axios": "^1.7.8",
+    "cheerio": "^1.0.0",
     "csp-header": "^5.2.1",
     "esbuild": "^0.23.1",
     "html-escaper": "^3.0.3",
