--- a/tests/mocks/regression/input/toc.yaml
+++ b/tests/mocks/regression/input/toc.yaml
@@ -11,9 +11,8 @@ items:
     href:
   - include: {path: toc-i.yaml}
   - include: {path: sub/toc.yaml, mode: link}
-  - name: Mermaid
-    href: ./mermaid
-  - name: Latex
+  - href: ./mermaid
+  - name: '{#T}'
     href: ./latex
   - name: Images
     href: ./images
