feat: Add autotitles to generic includer

--- a/tests/mocks/regression/input/toc.yaml
+++ b/tests/mocks/regression/input/toc.yaml
@@ -20,6 +20,11 @@ items:
     href: ./autotitle
   - name: includes
     href: ./includes
+  - name: generic
+    include:
+      path: generic
+      includers:
+        - name: generic
   - name: openapi
     include:
       path: openapi
