--- a/package.json
+++ b/package.json
@@ -88,17 +88,17 @@
     "ts-dedent": "2.2.0"
   },
   "devDependencies": {
-    "@aws-sdk/client-s3": "3.758.0",
-    "@aws-sdk/lib-storage": "3.758.0",
-    "@diplodoc/eslint-config": "2.0.0",
-    "@diplodoc/latex-extension": "1.3.3",
-    "@diplodoc/mermaid-extension": "1.3.5",
-    "@diplodoc/openapi-extension": "2.7.1",
-    "@diplodoc/prettier-config": "2.0.0",
-    "@diplodoc/search-extension": "1.2.2",
-    "@diplodoc/transform": "4.57.7",
-    "@diplodoc/tsconfig": "1.0.2",
-    "@diplodoc/yfmlint": "1.2.1",
+    "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/lib-storage": "^3.758.0",
+    "@diplodoc/eslint-config": "^2.0.0",
+    "@diplodoc/latex-extension": "^1.3.3",
+    "@diplodoc/mermaid-extension": "^1.3.5",
+    "@diplodoc/openapi-extension": "^2.7.1",
+    "@diplodoc/prettier-config": "^2.0.0",
+    "@diplodoc/search-extension": "^1.2.2",
+    "@diplodoc/transform": "^4.57.7",
+    "@diplodoc/tsconfig": "^1.0.2",
+    "@diplodoc/yfmlint": "^1.2.2",
     "@octokit/core": "4.2.4",
     "@types/async": "3.2.15",
     "@types/chalk": "2.2.0",
