chore: Export lib types

--- a/package.json
+++ b/package.json
@@ -44,11 +44,12 @@
   ],
   "scripts": {
     "build": "npm run build:clean && node scripts/build.cli.js",
-    "build:clean": "rm -rf build",
+    "build:types": "tspc -p tsconfig.lib.json; tspc -p tsconfig.build.json",
+    "build:clean": "rm -rf build lib",
     "e2e": "npm run build && cd tests && npm test",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
-    "prepublishOnly": "npm run lint && npm run build",
+    "prepublishOnly": "npm run lint && npm run build && npm run build:types",
     "postinstall": "node scripts/postinstall.js || true",
     "start": "node build/index.js",
     "test": "vitest --run",
@@ -123,7 +124,9 @@
     "simple-git": "3.22.0",
     "slugify": "^1.6.5",
     "svgo": "^3.3.2",
+    "ts-patch": "^3.3.0",
     "typescript": "^5.4.5",
+    "typescript-transform-paths": "^3.5.5",
     "uuid": "^11.0.4",
     "vite-tsconfig-paths": "^4.2.3",
     "vitest": "^2.1.8",
