--- a/package.json
+++ b/package.json
@@ -70,14 +70,15 @@
     ]
   },
   "dependencies": {
-    "@diplodoc/client": "3.3.4",
-    "@diplodoc/liquid": "1.3.1",
-    "@diplodoc/translation": "1.7.11",
-    "chalk": "4.1.2",
-    "commander": "12.0.0",
-    "execa": "9.5.3",
-    "glob": "10.4.5",
-    "highlight.js": "11.10.0",
+    "@diplodoc/client": "^3.3.4",
+    "@diplodoc/liquid": "^1.3.1",
+    "@diplodoc/translation": "^1.7.11",
+    "chalk": "^4.1.2",
+    "commander": "^12.0.0",
+    "csp-header": "^5.2.1",
+    "execa": "^9.5.3",
+    "glob": "^10.4.5",
+    "highlight.js": "^11.10.0",
     "js-yaml": "4.1.0",
     "katex": "0.16.9",
     "lodash": "4.17.21",
@@ -111,12 +112,11 @@
     "@types/node": "18.19.4",
     "@vitest/coverage-v8": "3.1.1",
     "ajv": "^8.11.0",
-    "algoliasearch": "5.20.0",
-    "async": "3.2.4",
-    "axios": "1.7.8",
-    "csp-header": "5.2.1",
-    "esbuild": "0.23.1",
-    "html-escaper": "3.0.3",
+    "algoliasearch": "^5.20.0",
+    "async": "^3.2.4",
+    "axios": "^1.7.8",
+    "esbuild": "^0.23.1",
+    "html-escaper": "^3.0.3",
     "husky": "8.0.3",
     "lint-staged": "12.5.0",
     "mime-types": "2.1.35",
