--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@diplodoc/translation": "^1.7.10",
     "chalk": "^4.1.2",
     "commander": "^12.0.0",
+    "csp-header": "^5.2.1",
     "execa": "^9.5.3",
     "glob": "^10.4.5",
     "highlight.js": "^11.10.0",
