chore: Fix some type errors

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -16,6 +16,11 @@
     "rootDir": "src",
     "outDir": "build"
   },
+  "include": [
+    "src/path.d.ts",
+    "src/globals.d.ts",
+    "src"
+  ],
   "exclude": [
     "src/**/*.spec.ts",
     "src/core/**",
