--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@diplodoc/translation": "^1.7.9",
     "chalk": "^4.1.2",
     "commander": "^12.0.0",
+    "execa": "^9.5.3",
     "glob": "^10.4.5",
     "highlight.js": "^11.10.0",
     "js-yaml": "4.1.0",
@@ -108,7 +109,6 @@
     "@types/markdown-it": "^13.0.9",
     "@types/mime-types": "2.1.4",
     "@types/node": "^18.19.4",
-    "@types/shelljs": "0.8.15",
     "@vitest/coverage-v8": "^3.1.1",
     "ajv": "^8.11.0",
     "algoliasearch": "^5.20.0",
@@ -122,7 +122,6 @@
     "mime-types": "2.1.35",
     "minimatch": "^9.0.3",
     "node-html-parser": "^6.1.5",
-    "shelljs": "^0.9.2",
     "simple-git": "3.22.0",
     "slugify": "^1.6.5",
     "svgo": "^3.3.2",
