--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,3 +34,12 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.ROBOT_DATAUI_NPM_TOKEN}}
         if: ${{ steps.release.outputs.release_created }}
         shell: bash
+      - working-directory: tests
+        run: |
+          echo Publishing companion package with version ${{steps.package.outputs.version}}
+          npm version ${{steps.package.outputs.version}}
+          npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.ROBOT_DATAUI_NPM_TOKEN}}
+        if: ${{ steps.release.outputs.release_created }}
+        shell: bash
