--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
       "default": "./lib/*/index.mjs"
     },
     "./package": "./package.json",
-    "./build-report": "./build/build-report.js"
+    "./report-logs": "./build/report-logs.js"
   },
   "main": "build/index.js",
   "bin": {
