--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     ]
   },
   "dependencies": {
-    "@diplodoc/client": "^3.3.4",
+    "@diplodoc/client": "^3.4.0",
     "@diplodoc/liquid": "^1.3.1",
     "@diplodoc/translation": "^1.7.11",
     "chalk": "^4.1.2",
@@ -94,6 +94,7 @@
     "@diplodoc/latex-extension": "^1.3.3",
     "@diplodoc/mermaid-extension": "^1.3.5",
     "@diplodoc/openapi-extension": "^2.7.1",
+    "@diplodoc/page-constructor-extension": "^0.2.1",
     "@diplodoc/prettier-config": "^2.0.0",
     "@diplodoc/search-extension": "^1.2.2",
     "@diplodoc/transform": "^4.57.7",
