--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@diplodoc/cli",
-  "version": "4.59.10",
+  "version": "5.0.0-rc-19",
   "description": "Make documentation using yfm-docs in Markdown and HTML formats",
   "keywords": [
     "markdown",
