--- a/package.json
+++ b/package.json
@@ -70,69 +70,69 @@
     ]
   },
   "dependencies": {
-    "@diplodoc/client": "^3.3.4",
-    "@diplodoc/liquid": "^1.3.1",
-    "@diplodoc/translation": "^1.7.11",
-    "chalk": "^4.1.2",
-    "commander": "^12.0.0",
-    "execa": "^9.5.3",
-    "glob": "^10.4.5",
-    "highlight.js": "^11.10.0",
+    "@diplodoc/client": "3.3.4",
+    "@diplodoc/liquid": "1.3.1",
+    "@diplodoc/translation": "1.7.11",
+    "chalk": "4.1.2",
+    "commander": "12.0.0",
+    "execa": "9.5.3",
+    "glob": "10.4.5",
+    "highlight.js": "11.10.0",
     "js-yaml": "4.1.0",
-    "katex": "^0.16.9",
+    "katex": "0.16.9",
     "lodash": "4.17.21",
-    "normalize-path": "^3.0.0",
-    "p-map": "^4.0.0",
-    "tapable": "^2.2.1",
+    "normalize-path": "3.0.0",
+    "p-map": "4.0.0",
+    "tapable": "2.2.1",
     "threads": "1.7.0",
-    "ts-dedent": "^2.2.0"
+    "ts-dedent": "2.2.0"
   },
   "devDependencies": {
-    "@aws-sdk/client-s3": "^3.525.0",
-    "@aws-sdk/lib-storage": "^3.758.0",
-    "@diplodoc/eslint-config": "^2.0.0",
-    "@diplodoc/latex-extension": "^1.3.3",
-    "@diplodoc/mermaid-extension": "^1.3.5",
-    "@diplodoc/openapi-extension": "^2.7.1",
-    "@diplodoc/prettier-config": "^2.0.0",
-    "@diplodoc/search-extension": "^1.2.2",
-    "@diplodoc/transform": "^4.57.7",
-    "@diplodoc/tsconfig": "^1.0.2",
-    "@diplodoc/yfmlint": "^1.2.1",
+    "@aws-sdk/client-s3": "3.758.0",
+    "@aws-sdk/lib-storage": "3.758.0",
+    "@diplodoc/eslint-config": "2.0.0",
+    "@diplodoc/latex-extension": "1.3.3",
+    "@diplodoc/mermaid-extension": "1.3.5",
+    "@diplodoc/openapi-extension": "2.7.1",
+    "@diplodoc/prettier-config": "2.0.0",
+    "@diplodoc/search-extension": "1.2.2",
+    "@diplodoc/transform": "4.57.7",
+    "@diplodoc/tsconfig": "1.0.2",
+    "@diplodoc/yfmlint": "1.2.1",
     "@octokit/core": "4.2.4",
-    "@types/async": "^3.2.15",
+    "@types/async": "3.2.15",
     "@types/chalk": "2.2.0",
-    "@types/html-escaper": "^3.0.0",
+    "@types/html-escaper": "3.0.0",
     "@types/js-yaml": "4.0.9",
-    "@types/json-stringify-safe": "^5.0.3",
+    "@types/json-stringify-safe": "5.0.3",
     "@types/lodash": "4.14.195",
-    "@types/markdown-it": "^13.0.9",
+    "@types/markdown-it": "13.0.9",
     "@types/mime-types": "2.1.4",
-    "@types/node": "^18.19.4",
-    "@vitest/coverage-v8": "^3.1.1",
+    "@types/node": "18.19.4",
+    "@vitest/coverage-v8": "3.1.1",
     "ajv": "^8.11.0",
-    "algoliasearch": "^5.20.0",
-    "async": "^3.2.4",
-    "axios": "^1.7.8",
-    "csp-header": "^5.2.1",
-    "esbuild": "^0.23.1",
-    "html-escaper": "^3.0.3",
+    "algoliasearch": "5.20.0",
+    "async": "3.2.4",
+    "axios": "1.7.8",
+    "csp-header": "5.2.1",
+    "esbuild": "0.23.1",
+    "html-escaper": "3.0.3",
     "husky": "8.0.3",
-    "lint-staged": "^12.5.0",
+    "lint-staged": "12.5.0",
     "mime-types": "2.1.35",
-    "minimatch": "^9.0.3",
-    "node-html-parser": "^6.1.5",
+    "minimatch": "9.0.3",
+    "node-html-parser": "6.1.5",
     "simple-git": "3.22.0",
-    "slugify": "^1.6.5",
-    "svgo": "^3.3.2",
-    "ts-patch": "^3.3.0",
-    "typescript": "^5.4.5",
-    "typescript-transform-paths": "^3.5.5",
-    "uuid": "^11.0.4",
-    "vite-tsconfig-paths": "^4.2.3",
-    "vitest": "^3.1.1",
-    "vitest-when": "^0.6.0",
-    "walk-sync": "^3.0.0"
+    "slugify": "1.6.5",
+    "svgo": "3.3.2",
+    "ts-patch": "3.3.0",
+    "typescript": "5.4.5",
+    "typescript-transform-paths": "3.5.5",
+    "uuid": "11.0.4",
+    "vite-tsconfig-paths": "4.2.3",
+    "vitest": "3.1.1",
+    "vitest-when": "0.6.0",
+    "walk-sync": "3.0.0"
   },
   "overrides": {
     "cytoscape": "3.31.2"
