--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     ]
   },
   "dependencies": {
-    "@diplodoc/client": "^3.6.3",
+    "@diplodoc/client": "^0.0.0-rc-mermaid-ext-mv-202506191332",
     "@diplodoc/liquid": "^1.3.1",
     "@diplodoc/translation": "^1.7.15",
     "chalk": "^4.1.2",
