--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "chalk": "^4.1.2",
     "commander": "^12.0.0",
     "csp-header": "^5.2.1",
+    "dependency-graph": "^1.0.0",
     "execa": "^9.5.2",
     "glob": "^10.4.5",
     "highlight.js": "^11.10.0",
