feat: Add arcadia-vcs extension

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "./package": "./package.json",
     "./manifest": "./build/manifest.json",
     "./mdit-plugins": "./build/mdit-plugins.js",
+    "./arcadia-vcs": "./build/arcadia-vcs.js",
     "./github-vcs": "./build/github-vcs.js"
   },
   "main": "build/index.js",
