fix(watch): Handle `move` event

--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "ajv": "^8.11.0",
     "async": "^3.2.4",
     "axios": "^1.7.8",
+    "chokidar": "^4.0.1",
     "esbuild": "^0.23.1",
     "html-escaper": "^3.0.3",
     "husky": "8.0.3",
