fix: from not array

--- a/tests/mocks/regression/input/presets.yaml
+++ b/tests/mocks/regression/input/presets.yaml
@@ -3,6 +3,7 @@ default:
   not-var: not-var-value
   product: root
   user: Bob
+  img_3: 3.png
 
 internal:
   default-var: default-var-internal-value
