--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,5 +30,9 @@ jobs:
         run: npm run build
       - name: Run unit tests
         run: npm run test:coverage
+      - name: Install e2e tests
+        working-directory: tests
+        run: npm ci
       - name: Run e2e tests
-        run: npm run e2e
+        working-directory: tests
+        run: npm test
