--- a/package.json
+++ b/package.json
@@ -52,15 +52,17 @@
     "build:types": "tspc -p tsconfig.lib.json || true; tspc -p tsconfig.build.json || true",
     "build:clean": "rm -rf build lib",
     "e2e": "npm run build && cd tests && npm test",
-    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run lint && npm run build && npm run build:types",
     "start": "node build/index.js",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest",
     "typecheck": "tsc --noEmit",
-    "regenerate-schemas": "scripts/regenerate-schemas.js"
+    "regenerate-schemas": "scripts/regenerate-schemas.js",
+    "lint": "lint update && lint",
+    "lint:fix": "lint update && lint fix",
+    "pre-commit": "lint update && lint-staged",
+    "prepare": "husky"
   },
   "husky": {
     "hooks": {
@@ -96,12 +98,11 @@
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/lib-storage": "^3.758.0",
-    "@diplodoc/eslint-config": "^2.0.0",
     "@diplodoc/latex-extension": "^1.3.3",
+    "@diplodoc/lint": "^1.3.3",
     "@diplodoc/mermaid-extension": "^1.3.5",
     "@diplodoc/openapi-extension": "^2.8.1",
     "@diplodoc/page-constructor-extension": "^0.10.0",
-    "@diplodoc/prettier-config": "^2.0.0",
     "@diplodoc/search-extension": "^3.0.0",
     "@diplodoc/transform": "^4.61.0",
     "@diplodoc/tsconfig": "^1.0.2",
