chore: Add ignore files

--- a/.eslintignore
+++ b/.eslintignore
@@ -2,3 +2,18 @@ node_modules
 /build
 /assets
 /lib
+
+.idea
+.vscode
+.history
+.env
+.DS_Store
+.eslintrc.js
+vitest.config.mjs
+/dist
+/cache
+/coverage
+/external
+/scripts
+/tests/mocks
+/tests/bin.mjs
