chore: Fix package-lock

--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "lint": "lint update && lint",
     "lint:fix": "lint update && lint fix",
     "pre-commit": "lint update && lint-staged",
-    "prepare": "husky"
+    "prepare": "husky || exit 0"
   },
   "husky": {
     "hooks": {
