fix: rebase links in image in autotitles

--- a/tests/mocks/preprocess/input/toc.yaml
+++ b/tests/mocks/preprocess/input/toc.yaml
@@ -14,3 +14,11 @@ items:
     href: ./autotitle
   - name: includes
     href: ./includes
+  - name: level11
+    href: ./includes/level11
+  - name: level0
+    href: ./level0
+  - name: level1
+    href: ./level1/level1
+  - name: level2
+    href: ./level1/level2/level2
